force-app/main/default/objects/IOM_Global_Configuration_Data__mdt/IOM_Global_Configuration_Data__mdt.object-meta.xml
<CustomObject>
    <description>Global Constants will hold information of constants that will be used across whole org. Like in Apex or LWC.</description>
    <label>IOM Global Configuration Data</label>
    <pluralLabel>IOM Global Configuration Data</pluralLabel>
</CustomObject>