force-app/main/default/objects/IOM_Global_Configuration_Data__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is Active Configuration</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>