force-app/main/default/objects/IOM_Global_Configuration_Data__mdt/fields/IOM_Description__c.field-meta.xml
<CustomField>
    <fullName>IOM_Description__c</fullName>
    <description>Record Description</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>