force-app/main/default/objects/IOM_Global_Configuration_Data__mdt/fields/IOM_Value__c.field-meta.xml
<CustomField>
    <fullName>IOM_Value__c</fullName>
    <description>value</description>
    <label>Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>